--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <span class="moves">3</span> Moves
             <span class="timer">00:00</span>
-            <div class="restart">
+            <div class="restart" id="restart_button">
                 <i class="fa fa-repeat"></i>
             </div>
         </section>
