Correct some JS Style

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h2>Congratulations !!!</h2>
                 <a class="close" href=#>x</a>
                 <div class="content-1">
-                    Congratulations you're a winner !!!
+                    Congratulations, you're a winner !!!
                 </div>
                 <div class="content-2">
                     <p>You made <span id=totalMoves></span> moves </p>
